singletons-base/tests/compile-and-dump/Singletons/BadEnumDeriving.golden

Singletons/BadEnumDeriving.hs:0:0: error: [GHC-39584]
    Can't derive Enum instance for Foo_0 a_1.
  |
5 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...
