singletons-base/tests/compile-and-dump/Singletons/BadEnumDeriving.hs
module Singletons.BadEnumDeriving where

import Data.Singletons.TH

$(singletons [d|
  data Foo a = Foo a
               deriving Enum
  |])
